--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type='text/javascript', src="http://code.jquery.com/jquery-1.9.0.min.js")
+    block scripts
   body
     block content
